Sección about añadida | HTML | CSS | Favicon añadido

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>LandingAngular</title>  
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://d1ujqdpfgkvqfi.cloudfront.net/favicon-generator/htdocs/favicons/2024-08-07/691672c1afdb066f5a893eab2928c0ba.ico.png">
 
   <!-- Box Icon Link for Icons -->
 <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
